--- a/Formulario2.html
+++ b/Formulario2.html
@@ -3,7 +3,9 @@
   <head>
     <title> formulario </title>
   </head>
- <body>
+<body>
+    Mi primera pagina html5
+</body>
 	<header>
 	   <h1> Datos Cliente </h1>
 	</header>
